fixed minor alignement issues

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -659,7 +659,6 @@ header.main{
 }
 
 nav.vertical.stamps, nav.vertical.half-stamps{
-	padding: 0 30px 0 0;
 	overflow: hidden;
 
 	article{
@@ -1352,7 +1351,7 @@ button.cancel:hover, input[type=button].cancel:hover, a.button.cancel:hover, inp
 }
 
 nav.vertical{
-	padding: 10px 5px;
+	padding: 0 20px 0 0;
 	margin-right: 10px;
 	h2{
 		font-size: 16px;
@@ -1785,7 +1784,6 @@ textarea:focus{
 }
 
 .icons-view{
-	background: transparent;
 	margin-top: 0;
 	strong{
 		font-style: italic;
@@ -2848,22 +2846,12 @@ ul.toc{
 
 .dominos.fallen{
 	.item{
+		font-size: 12px;
+		line-height: 21px;
 		min-width: 295px;
 		width: 25%;
-		.domino{
-			.top, .bottom{
-				clear: none;
-				float: left;
-				padding-bottom: 48%;
-
-			}
-			.bottom{
-				width: 48%;
-				margin: 0;
-			}
-			.top{
-				width:52%;
-			}
+		strong{
+			font-size: 16px;
 		}
 	}
 }
